fix : scrollbar would show even if not scrolling

--- a/src/styles/sass/chat-section.scss
+++ b/src/styles/sass/chat-section.scss
@@ -53,7 +53,7 @@
 }
 
 .message-container {
-  overflow-y: scroll;
+  overflow-y: auto;
   max-height: 100%;
   display: flex;
   flex-direction: column;
